// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PremiumInput should render the PremiumInput view with 0 premium 1`] = `
<View
  style={
    {
      "alignItems": "center",
      "flexDirection": "row",
      "gap": 8,
      "justifyContent": "center",
      "paddingLeft": 8,
    }
  }
>
  <PeachText
    style={
      [
        {
          "fontFamily": "Baloo2-Regular",
          "fontSize": 20,
          "letterSpacing": 0.2,
          "lineHeight": 28,
          "textAlign": "center",
        },
        {
          "color": "#2B1911",
        },
      ]
    }
  >
    premium
    :
  </PeachText>
  <ForwardRef
    onChange={[Function]}
    value="0"
  />
</View>
`;

exports[`PremiumInput should render the PremiumInput view with discount 1`] = `
<View
  style={
    {
      "alignItems": "center",
      "flexDirection": "row",
      "gap": 8,
      "justifyContent": "center",
      "paddingLeft": 8,
    }
  }
>
  <PeachText
    style={
      [
        {
          "fontFamily": "Baloo2-Regular",
          "fontSize": 20,
          "letterSpacing": 0.2,
          "lineHeight": 28,
          "textAlign": "center",
        },
        {
          "color": "#F56522",
        },
      ]
    }
  >
    discount
    :
  </PeachText>
  <ForwardRef
    onChange={[Function]}
    value="-3.2"
  />
</View>
`;

exports[`PremiumInput should render the PremiumInput view with premium 1`] = `
<View
  style={
    {
      "alignItems": "center",
      "flexDirection": "row",
      "gap": 8,
      "justifyContent": "center",
      "paddingLeft": 8,
    }
  }
>
  <PeachText
    style={
      [
        {
          "fontFamily": "Baloo2-Regular",
          "fontSize": 20,
          "letterSpacing": 0.2,
          "lineHeight": 28,
          "textAlign": "center",
        },
        {
          "color": "#05A85A",
        },
      ]
    }
  >
    premium
    :
  </PeachText>
  <ForwardRef
    onChange={[Function]}
    value="3.2"
  />
</View>
`;
